# ros2_stereo

./: Dockerfile  setup.sh
libtconfig/: CMakeLists.txt  README.md  libtconfig-config.cmake.in
libtconfig/include/tconfig/: tconfig.h  tconfig_param.h
libtconfig/src/: CMakeLists.txt  tconfig_param.cpp
libtlive/: CMakeLists.txt  README.md  libtlive-config.cmake.in
libtlive/cmake/: FindTBB.cmake  FindZeroMQ.cmake
libtlive/include/tlive/: tlive_client.h  tlive_server.h  tlive_stream.h  tlive_stream_client.h  tlive_wanted.h
libtlive/src/: CMakeLists.txt  tlive_client.cpp  tlive_stream_client.cpp
stereo_ws/config/: ost.txt
stereo_ws/src/camera_controller/: CMakeLists.txt  package.xml
stereo_ws/src/camera_controller/src/: left.yaml  main.cpp  right.yaml
